# template_python

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
__PROJECT_NAME__/: ___PROJECT_NAME__.py  __init__.py
tests/: test_cwc.py
